# strieber-gpt-3

./: .env.example  .gitignore  Dockerfile.llamacpp  MCP-SETUP.md  Makefile  PAGE-READER-REDESIGN.md  READERLM-SETUP.md  README.md  compose.llama.yml  compose.yml  qwen-image-edit-workflow.json  qwen-image-workflow.json
backend/tools/code-executor/: Dockerfile  requirements.txt
backend/tools/mcp_servers/: Dockerfile.mcp-server  Dockerfile.mcp-server-nodejs  __init__.py  brave_backend.py  code_interpreter.py  jina_reader.py  launcher.py  local_reader.py  page_reader.py  requirements.txt  search_backend.py  search_utils.py  tool_progress.py  weather.py  web_search.py
backend/tools/mcp_servers/comfy_qwen/: README.md  __init__.py  comfy_client.py  example_usage.py  owui_client.py  server.py
backend/tools/mcp_servers/common/: VALIDATION_USAGE_EXAMPLES.md  __init__.py  error_handling.py  http_utils.py  mcp_base.py  validation.py
backend/tools/playwright-fetcher/: Dockerfile  fetcher.py  requirements.txt
backend/tools/playwright-scraper/: Dockerfile  requirements.txt  scraper_server.py
benchmarks/: RESULTS-ANALYSIS.md
comfy_qwen_mcp/: .env.example  .gitignore  README.md  __init__.py  comfy_client.py  example_usage.py  owui_client.py  pyproject.toml  requirements.txt  server.py  validate_setup.py
comfy_qwen_mcp/filter/: __init__.py  image_to_file_router.py
comfy_qwen_mcp/workflows/: qwen_edit_api.json  qwen_image_api.json
comfyui/: Dockerfile  README.md
comfyui/docker/: entrypoint.sh
docs/: MCP_PORT_SUMMARY.md  PHASE1-README.md  chat.md
(+24 files in other folders)
